--- a/src/js/templates/maktupList.hbs
+++ b/src/js/templates/maktupList.hbs
@@ -2,7 +2,7 @@
     {{#each this.hits}}
     <li>
         <div class="photo-card">
-            <img src={{this.webformatURL}} alt=""/>
+            <img src={{this.webformatURL}} alt="" width="300px" height="220px"/>
         
             <div class="stats">
                 <p class="stats-item">
