--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@ body {
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   background-color: lightgrey;
+  padding: 40px 30px;
   /*
    * CSS image reference example.
    */
@@ -27,10 +28,21 @@ ul {
 }
 
 .button {
-  margin: 20px;
-  border-radius: 5px;
-  background-color: cornflowerblue;
-  border-color: cornflowerblue;
+  font-weight: 500;
+  width: 120px;
+  color: white;
+  text-decoration: none;
+  padding: 0.2em 1em calc(0.2em + 3px);
+  border-radius: 3px;
+  background: rgb(64, 199, 129);
+  box-shadow: 0 -3px rgb(53, 167, 110) inset;
+  transition: 0.2s;
+}
+
+.button:hover,
+.button:focus {
+  background: rgb(33, 147, 90);
+  box-shadow: 0 3px rgb(33, 147, 90) inset;
 }
 
 .material-icons {
@@ -54,4 +66,28 @@ ul {
   object-fit: cover;
   background-size: contain;
   border-radius: 10px;
+}
+input {
+  height: 28px;
+  border-radius: 3px;
+  margin-right: 5px;
+  width: 200px;
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
