--- a/src/styles.css
+++ b/src/styles.css
@@ -79,64 +79,13 @@ input {
   justify-content: center;
 }
 
-.modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 5;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.9);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.link-pixabay {
+  display: inline-flex;
+  text-decoration: none;
+  margin-left: auto;
+  width: 150px;
+  margin-bottom: 50px;
 }
-/* SPINNER */
-#spinner {
+#spin {
   position: relative;
-}
-
-@keyframes spinner-line-fade-more {
-  0%,
-  100% {
-    opacity: 0; /* minimum opacity */
-  }
-  1% {
-    opacity: 1;
-  }
-}
-
-@keyframes spinner-line-fade-quick {
-  0%,
-  39%,
-  100% {
-    opacity: 0.25; /* minimum opacity */
-  }
-  40% {
-    opacity: 1;
-  }
-}
-
-@keyframes spinner-line-fade-default {
-  0%,
-  100% {
-    opacity: 0.22; /* minimum opacity */
-  }
-  1% {
-    opacity: 1;
-  }
-}
-
-@keyframes spinner-line-shrink {
-  0%,
-  25%,
-  100% {
-    /* minimum scale and opacity */
-    transform: scale(0.5);
-    opacity: 0.25;
-  }
-  26% {
-    transform: scale(1);
-    opacity: 1;
-  }
 }
