переделала на async await

--- a/src/js/templates/maktupList.hbs
+++ b/src/js/templates/maktupList.hbs
@@ -1,6 +1,6 @@
 
     {{#each this.hits}}
-    <li>
+    <li class="card">
         <div class="photo-card">
             <img src={{this.webformatURL}} data={{this.largeImageURL}} alt="" width="300px" height="220px"/>
         
